# Rune-Goblin

./: .env.example  .gitignore  CHANGELOG.md  CREDITS.md  Dockerfile  README.md  progress.md  pyproject.toml  requirements.txt  rune_goblin_plan.md  start.sh
.github/workflows/: deploy-hf-space-modal.yml  deploy-hf-space.yml
api/: server.py
app/: __init__.py  app.py  rpg_app.py  rpg_bridge.py  vision_app.py
app/rpg_static/: manifest.json  rpg.css  rpg.js
configs/: train_lora.yaml
data/rune_goblin_dataset/: README.md  generate_rune_goblin_dataset.py  sample_100_preview.csv  schema.json  validation.jsonl  validation_messages_only.jsonl  validation_report.json
deploy/: modal_vision.py  modal_vision_gguf-L4.py  modal_vision_gguf.py
docs/: FINETUNE_VISION.md  MODAL_DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
game_plans/: game_plan.md  map_plan.md  rpg_plan.md  story_plan.md
notebooks/: MODAL-run-p1Jun2026.ipynb  deprecated-rune_goblin_vision_finetune_modal.ipynb  rune_goblin_dataset_exploration.ipynb  rune_goblin_vision_finetune_modal.ipynb
scripts/: bake_extra_sprites.py  modal_train.py  prepare_vision_dataset.py  test_vision_cast.py
src/rune_goblin/: __init__.py  beats.py  dialogue.py  download_model.py  engine.py  evaluate.py  finetune.py  game.py  generate_dataset.py  inference.py  prompts.py  quests.py  runelang.py  schema.py  story.py  vfx.py  vision_inference.py  world.py
tests/: test_beats.py  test_dialogue.py  test_modal_vision.py  test_modal_vision_gguf.py  test_quests.py  test_rpg_depth.py  test_static_manifest.py  test_story.py  test_world_cast.py
(+1 files in other folders)
